_sass/pages/post.sass
.post
    margin-top: 125px
    width: 810px

    > .title
        text-align: center
        margin-bottom: 3rem

    > .date,
    > .post-tags
        color: $gama
        font-weight: $thin-font
        font-size: 1.4rem
        text-transform: uppercase
        text-align: center
        display: block
        margin-bottom: 6rem
        letter-spacing: 1px
        -webkit-font-smoothing: antialiased
        text-rendering: optimizeLegibility

    > .date
        margin-bottom: 2rem

    > .post-tags > .item
        padding: 2px 8px
        border-radius: 3px
        font-size: 1.1rem
        background: $epsilon
        color: $alpha
        letter-spacing: 1px
        margin: 3px 1px
        text-decoration: none
        display: inline-block

    // general style
    > h2,
    > h3,
    > h4
        margin-top: 40px

        a
            text-decoration: none

    > .title-image
        max-height: 420px
        display: block
        margin: 0 auto

    > .blog-navigation
        font-size: 1.4rem
        display: block
        width: auto
        overflow: hidden
        a
            display: block
            width: 50%
            float: left
            margin: 1em 0
        .next
            text-align: right

